--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <script src="index.js"></script>
+        <script src="dongulerdemo.js"></script>
     </head>
     <body>
         <h1>Recap Demo 1 calisiyor... f12 ye basarak consoleyi kontrol edin</h1>
