--- a/dom.html
+++ b/dom.html
@@ -28,7 +28,7 @@
         <p id="mesaj"></p>
 
         <input type="text" name="musteriAdi" value="Seckin Soygan">
-        <h1>Seckin Soygan</h1>
+        <h1 id="seckin" >Seckin Soygan</h1>
         <h1 id="yazar"></h1>
         <p id="agac">Agac Değeri</p>
 
