--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
     <head>
-        <script src="dongulerdemo.js"></script>
+        <!-- <script src="dongulerdemo.js"></script> -->
+        <!-- <script src="scope.js"></script> -->
+        <script src="ileridizi.js"></script>
     </head>
     <body>
         <h1>Recap Demo 1 calisiyor... f12 ye basarak consoleyi kontrol edin</h1>
