Javascript temelleri -  son

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <!-- <script src="dongulerdemo.js"></script> -->
         <!-- <script src="scope.js"></script> -->
-        <script src="ileridizi.js"></script>
+        <script src="class.js"></script>
     </head>
     <body>
         <h1>Recap Demo 1 calisiyor... f12 ye basarak consoleyi kontrol edin</h1>
